--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RCOE Events</title>
+    <!-- local css links -->
+    <link rel="stylesheet" href="/public/css/home.css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- cdn -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    /> -->
+  </head>
+  <body>
+    <header class="container main">
+      <a href="#" class="main-link">RCOE Events</a>
+      <div class="main-toggle">
+      <a href="#" class="main-toogle-link">RCOE Events</a>
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </div>
+        <form action="#" class="main-form">
+          <input type="text" class="main-form-text" name="searchEvent" id="searchEventId" placeholder="Search Event">
+          <input type="button" class="main-form-button" name="searchButton" value="Search">
+        </form>
+        <nav class="main-navbar">
+          <ul class="main-nav-list">
+            <li class="main-nav-item">
+              <a href="#" class="main-nav-link">Home</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#" class="main-nav-link">Sign In</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#" class="main-nav-link">Sign Up</a>
+            </li>
+          </ul>
+        </nav>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function(){
+        $('.main-toggle').click(function(){
+          $('.main-form').toggleClass('active').slideToggle();
+          $('.main-nav-list').toggleClass('active').slideToggle();
+        })
+      })
+    </script>
+  </body>
 </html>
