--- a/public/sass/home.scss
+++ b/public/sass/home.scss
@@ -1,119 +1,148 @@
-@import "./resets";
 @import "./variables";
-
-@function weight($weight-name) {
-    @return map-get($map: $font-weights, $key: $weight-name);
-}
+@import "./resets";
 
 .container {
-    width: 100%;
+  width: 100%;
 }
 
 .main {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    background-color: $primary-color;
-}
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: $primary-color;
 
-.main-link {
+  .main-link {
     @include main-link-content();
-}
-
-.main-toggle {
+  }
+  
+  .main-toggle {
     width: 100%;
     padding: 1rem;
     color: #fff;
     display: none;
     font-size: 1.5rem;
-}
+  }
 
-.main-form {
+  .main-form {
     display: block;
     margin: auto 0;
     width: 50%;
-}
 
-.main-form-text {
-    border: none;
-    width: 80%;
-    padding: .2rem;
-    border-radius: 10px;
-}
-
-.main-form-text::placeholder {
-    color: $primary-color;
-    padding: .7rem;
-}
-
-.main-form-button {
-    width: 10%;
-    padding: .2rem;
-    border: none;
-    border-radius: 10px;
-    font-weight: weight(bold);
-    color: $primary-color;
-}
-
-.main-nav-list {
+    &-text {
+      border: none;
+      width: 80%;
+      padding: 0.2rem;
+      border-radius: 10px;
+    }
+    &-text::placeholder {
+      color: $primary-color;
+      padding: 0.7rem;
+    }  
+    &-button {
+      width: 10%;
+      padding: 0.2rem;
+      border: none;
+      border-radius: 10px;
+      font-weight: weight(bold);
+      color: $primary-color;
+    }
+    
+  }
+        
+  .main-nav-list {
     list-style: none;
     display: flex;
-}
-
-.main-nav-item {
-    padding: .7rem;
+  }
+  
+  .main-nav-item {
+    padding: 0.7rem;
     margin-left: -1px;
     border: 1px red solid;
-}
-
-.main-nav-link {
+  }
+  
+  .main-nav-link {
     text-decoration: none;
     color: white;
     font-weight: weight(medium);
+  }
 }
 
-@media screen and (max-width: $small-device) {
-    .container {
-        width: 100%;
+.section-wrapper {
+  width: 80%;
+  background-color: green;
+  margin: 0 auto;
+  padding: 1em;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  
+  .section-card {
+    width: 100%;
+    height: 80vh;
+    background-color: $primary-color;
+    color: white;
+    border-radius: 5%;
+    box-shadow: 2px 4px 0.7rem rgb(44, 43, 43);
+
+    .section-card-image-wrapper {
+      @include section-card-content-container(100%, 50%);
+      overflow: hidden;
     }
-    .main-link {
-        display: none;
+    
+    .section-card-image {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 1em;
     }
-    .main-toggle {
-        display: flex;
-        justify-content: space-between;
+    
+    .section-card-content-wrapper {
+      @include section-card-content-container(100%, 50%);
+      display: grid;
+      grid-template-rows: .7fr 2.6fr 0.5fr 0.5fr;
     }
-    a {
-        @include main-link-content(bold, .1rem);
+    
+    .section-card-content-header {
+      font-weight: weight(bold);
+      text-align: center;
+      font-size: 1.2em;
+      text-align: justify;
+      text-transform: uppercase;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
-    .main {
-        display: block;
+    
+    .section-card-content-description {
+      font-weight: weight(regular);
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
-    .main-form {
-        display: none;
-        width: 100%;
-        padding: .7rem;
-        text-align: center;
-        border-top: 1px solid red;
+    .section-card-content-footer {
+      display: flex;
+      justify-content: space-between;
     }
-    .main-form-text {
-        width: 60%;
+    
+    .button {
+      background-color: red;
+      border: none;
+      border-radius: 1rem 1rem;
+      padding: .5em;
+      font-size: 1rem;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      margin-right: 1rem;
+      background-color: $secondary-color;
+      font-weight: weight(bold);
     }
-    .main-form-button {
-        width: 20%;
-    }
-    .main-nav-list {
-        display: none;
-        width: 100%;
-    }
-    .main-nav-item {
-        text-align: center;
-        margin-top: -1px;
-        border-left: 0;
-        border-right: 0;
-    }
-    .active {
-        display: block;
-    }
+  }
 }
+
+// media query for phone --------------------------------
+@import "./home.media.sm";
+
+// media query for tablets ------------------
+@import "./home.media.md";
