--- a/public/sass/_resets.scss
+++ b/public/sass/_resets.scss
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
 }
-
 body {
-    background-color: $kinda-red;
+    background-color: $background_color;
 }
