sign up page done

--- a/public/sass/home/_home.media.sm.scss
+++ b/public/sass/home/_home.media.sm.scss
@@ -46,6 +46,7 @@
         
             .active {
                 display: block;
+                animation-iteration-count: 1;
             }
     }
 
