--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,10 +5,6 @@
           box-sizing: border-box;
 }
 
-body {
-  background-color: white;
-}
-
 .container {
   width: 100%;
 }
@@ -102,7 +98,6 @@ body {
 
 .section-wrapper {
   width: 100%;
-  background-color: white;
   margin: 0 auto;
   padding: 2em;
   display: -ms-grid;
@@ -238,6 +233,8 @@ body {
   }
   .main .active {
     display: block;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1;
   }
   .section-wrapper {
     -ms-grid-columns: (80%)[1];
