--- a/public/sass/home/home.scss
+++ b/public/sass/home/home.scss
@@ -1,5 +1,5 @@
 @import "./variables";
-@import "./resets";
+@import "../resets";
 
 .container {
   width: 100%;
@@ -69,7 +69,6 @@
 
 .section-wrapper {
   width: 100%;
-  background-color: $background_color;
   margin: 0 auto;
   padding: 2em;
   display: grid;
