--- a/views/signup.html
+++ b/views/signup.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp</title>
-    <link rel="stylesheet" href="/public/css/signup.css">
-</head>
-<body>
 
-<div class="signup-wrap">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/public/css/signup.css" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <title>SignUp</title>
+</head>
+
+<body>
+  <a href="#" class="signup-back-link"><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a>
+  <div class="signup-wrap">
     <h2>Sign Up here</h2>
     <form action="#">
-        <input type="text" name="name" placeholder="First Name...">
-        <input type="text" name="name" placeholder="Last Name...">
-        <input type="email" name="email" placeholder="Email...">
-        <input type="password" name="pwd" placeholder="Password...">
-        <input type="password" name="conf-pwd" placeholder="Confirm Password...">
-        <input type="submit" value="submit">
+      <input type="text" name="name" placeholder="First Name..." />
+      <input type="text" name="name" placeholder="Last Name..." />
+      <input type="email" name="email" placeholder="Email..." />
+      <input type="password" name="pwd" placeholder="Password..." />
+      <input type="password" name="conf-pwd" placeholder="Confirm Password..." />
+      <input type="submit" value="submit" />
     </form>
-</div>
-
+  </div>
 </body>
+
 </html>
