--- a/views/index.html
+++ b/views/index.html
@@ -1,86 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RCOE Events</title>
-    <!-- local css links -->
-    <link rel="stylesheet" href="/public/css/home.css" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-  />
-    <!-- cdn -->
-    <!-- <link
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RCOE Events</title>
+  <!-- local css links -->
+  <link rel="stylesheet" href="/public/css/home.css" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <!-- cdn -->
+  <!-- <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     /> -->
-  </head>
-  <body>
-    <header class="container main" style="position: sticky; top: 0;">
-      <a href="#" class="main-link">RCOE Events</a>
-      <div class="main-toggle">
-        <a href="#">RCOE Events</a>
-        <i class="fa fa-bars" id="main-toggle-icon-id" aria-hidden="true"></i>
+</head>
+
+<body>
+  <header class="container main" style="position: sticky; top: 0;">
+    <a href="#" class="main-link">RCOE Events</a>
+    <div class="main-toggle">
+      <a href="#">RCOE Events</a>
+      <i class="fa fa-bars" id="main-toggle-icon-id" aria-hidden="true"></i>
+    </div>
+    <form action="#" class="main-form" id="main-form-id">
+      <input type="text" class="main-form-text" name="searchEvent" id="searchEventId" placeholder="Search Event" />
+      <button type="submit" class="main-form-button" name="searchButtonIcon">
+        <i class="fa fa-search" aria-hidden="true" class="main-form-button-icon"></i>
+      </button>
+    </form>
+    <nav class="main-navbar">
+      <ul class="main-nav-list" id="main-nav-list-id">
+        <li class="main-nav-item">
+          <a href="#" class="main-nav-link">Home</a>
+        </li>
+        <li class="main-nav-item">
+          <a href="#" class="main-nav-link">Log In</a>
+        </li>
+        <li class="main-nav-item">
+          <a href="#" class="main-nav-link">Sign Up</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section class="container section-wrapper">
+    <div class="section-card">
+      <div class="section-card-image-wrapper">
+        <img src="/public/images/796061-naruto-quotes-wallpapers-1920x1200-download-free.jpg" class="section-card-image"
+          alt="event cover image" />
       </div>
-      <form action="#" class="main-form" id="main-form-id">
-        <input
-          type="text"
-          class="main-form-text"
-          name="searchEvent"
-          id="searchEventId"
-          placeholder="Search Event"
-        />
-        <button type="submit" class="main-form-button" name="searchButtonIcon">
-          <i
-            class="fa fa-search"
-            aria-hidden="true"
-            class="main-form-button-icon"
-          ></i>
-        </button>
-      </form>
-      <nav class="main-navbar">
-        <ul class="main-nav-list" id="main-nav-list-id">
-          <li class="main-nav-item">
-            <a href="#" class="main-nav-link">Home</a>
-          </li>
-          <li class="main-nav-item">
-            <a href="#" class="main-nav-link">Log In</a>
-          </li>
-          <li class="main-nav-item">
-            <a href="#" class="main-nav-link">Sign Up</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section class="container section-wrapper">
-      <div class="section-card">
-        <div class="section-card-image-wrapper">
-          <img
-            src="/public/images/796061-naruto-quotes-wallpapers-1920x1200-download-free.jpg"
-            class="section-card-image"
-            alt="event cover image"
-          />
-        </div>
-        <div class="section-card-content-wrapper">
-          <div class="section-card-content-header">Cycling on the rcoe principals head</div>
-          <div class="section-card-content-description"> Lorem ipsum Voluptate quaerat dolore aliquid rem sequi omnis repellendus accusamus? Placeat asfhkla dfaksl fkjlashdf dsadhfs lsdfh sld quos aspernatur exercitation quae et odit ea ad? heljlrsldf</div>
-          <div class="section-card-content-date">12 May</div>
-          <div class="section-card-content-footer">
-            <div class="section-card-content-price">
-              Free
-            </div>
-            <div class="section-card-content-apply"><a href="#" class="button">Apply</a></div>
+      <div class="section-card-content-wrapper">
+        <div class="section-card-content-header"> Cycling on the rcoe principals head </div>
+        <div class="section-card-content-description"> Lorem ipsum Voluptate quaerat dolore aliquid rem sequi omnis
+          repellendus accusamus? Placeat asfhkla dfaksl fkjlashdf dsadhfs lsdfh sld quos aspernatur exercitation quae et
+          odit ea ad? heljlrsldf </div>
+        <div class="section-card-content-date">12 May</div>
+        <div class="section-card-content-footer">
+          <div class="section-card-content-price">Free</div>
+          <div class="section-card-content-apply">
+            <a href="#" class="button">Apply</a>
           </div>
         </div>
       </div>
-      <!-- <div class="section-card">
+    </div>
+    <!-- <div class="section-card">
         <div class="section-card">
           <div class="section-card-image-wrapper">
             <img
@@ -127,26 +111,24 @@
       <div class="section-card">box4</div>
       <div class="section-card">box4</div>
       <div class="section-card">box4</div> -->
-    </section>
+  </section>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+  </script>
+  <script>
+    // ----------------------Toggle Navigation using jQuery----------
+    // $(document).ready(function () {
+    //   $(".main-toggle").click(function () {
+    //     $(".main-form").toggleClass("active").slideToggle();
+    //     $(".main-nav-list").toggleClass("active").slideToggle();
+    //   });
+    // });
+    // ----------------------------------------------------------------
+    document.getElementById("main-toggle-icon-id").addEventListener("click", () => {
+      document.getElementById("main-form-id").classList.toggle("active");
+      document.getElementById("main-nav-list-id").classList.toggle("active");
+    });
+  </script>
+</body>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      // ----------------------Toggle Navigation using jQuery----------
-      // $(document).ready(function () {
-      //   $(".main-toggle").click(function () {
-      //     $(".main-form").toggleClass("active").slideToggle();
-      //     $(".main-nav-list").toggleClass("active").slideToggle();
-      //   });
-      // });
-      // ----------------------------------------------------------------
-      document.getElementById("main-toggle-icon-id").addEventListener('click',()=>{
-        document.getElementById("main-form-id").classList.toggle("active");
-        document.getElementById("main-nav-list-id").classList.toggle("active");
-      });
-    </script>
-  </body>
 </html>
