--- a/views/login.html
+++ b/views/login.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LogIn</title>
     <link rel="stylesheet" href="/public/css/signup.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>LogIn</title>
 </head>
 <body>
-
+    <a href="#" class="signup-back-link"
+    ><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a
+  >
 <div class="signup-wrap">
     <h2>LogIn</h2>
     <form action="#">
