--- a/public/sass/home/_variables.scss
+++ b/public/sass/home/_variables.scss
@@ -3,6 +3,9 @@
 $primary_color: #c70039;
 $secondary_color: rgb(255, 195, 0);
 
+$shade1: #24292E;
+$shade2: #3F4448;
+
 $font-weights: (
   "regular": 400,
   "medium": 500,
