--- a/views/signup.html
+++ b/views/signup.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <a href="#" class="signup-back-link"><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a>
+  <a href="index.html" class="signup-back-link"><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a>
   <div class="signup-wrap">
     <h2>Sign Up here</h2>
-    <form action="#">
+    <form action="login.html">
       <input type="text" name="name" placeholder="First Name..." />
       <input type="text" name="name" placeholder="Last Name..." />
       <input type="email" name="email" placeholder="Email..." />
