--- a/views/index.html
+++ b/views/index.html
@@ -33,13 +33,13 @@
     <nav class="main-navbar">
       <ul class="main-nav-list" id="main-nav-list-id">
         <li class="main-nav-item">
-          <a href="#" class="main-nav-link">Home</a>
+          <a href="index.html" class="main-nav-link">Home</a>
         </li>
         <li class="main-nav-item">
-          <a href="#" class="main-nav-link">Log In</a>
+          <a href="login.html" class="main-nav-link">Log In</a>
         </li>
         <li class="main-nav-item">
-          <a href="#" class="main-nav-link">Sign Up</a>
+          <a href="signup.html" class="main-nav-link">Sign Up</a>
         </li>
       </ul>
     </nav>
@@ -64,54 +64,12 @@
         </div>
       </div>
     </div>
-    <!-- <div class="section-card">
-        <div class="section-card">
-          <div class="section-card-image-wrapper">
-            <img
-              src="/public/images/naruto.jpg"
-              class="section-card-image"
-              alt="event cover image"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="section-card">
-        <div class="section-card">
-          <div class="section-card-image-wrapper">
-            <img
-              src="/public/images/649533.png"
-              class="section-card-image"
-              alt="event cover image"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="section-card">
-        <div class="section-card">
-          <div class="section-card-image-wrapper">
-            <img
-              src="/public/images/649533.png"
-              class="section-card-image"
-              alt="event cover image"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="section-card">
-        <div class="section-card">
-          <div class="section-card-image-wrapper">
-            <img
-              src="/public/images/649533.png"
-              class="section-card-image"
-              alt="event cover image"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="section-card">box4</div>
-      <div class="section-card">box4</div>
-      <div class="section-card">box4</div> -->
   </section>
+  <footer>
+    <div class="footer-container">
+      Made with <div class="footer-heart">❤</div> by FreakyHarsh
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
   </script>
