--- a/views/login.html
+++ b/views/login.html
@@ -8,16 +8,17 @@
     <title>LogIn</title>
 </head>
 <body>
-    <a href="#" class="signup-back-link"
+    <a href="/views/index.html" class="signup-back-link"
     ><i class="fa fa-caret-left" aria-hidden="true"></i> Back</a
   >
 <div class="signup-wrap">
     <h2>LogIn</h2>
-    <form action="#">
+    <form action="manage.html">
         <input type="email" name="email" placeholder="Email...">
         <input type="password" name="pwd" placeholder="Password...">
         <input type="submit" value="submit">
     </form>
+    <div class="signup-create-account">Create a new Accout: <a href="signup.html">signup here</a></div>
 </div>
 
 </body>
